Finished Velopack implementation. Changed installer move to copy, since the .exe is considered a Velopack asset. Separated the update check and download statuses, and hooked up the download progress UI update. Updated Velopack version and moved Velopack run to app start to satisfy the validator.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -17,6 +17,7 @@
     <Platforms>x64</Platforms>
     <ValidateExecutableReferencesMatchSelfContained>false</ValidateExecutableReferencesMatchSelfContained>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <StartupObject>VidCoder.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <DefineConstants>DEBUG</DefineConstants>
