--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -15,6 +15,8 @@
       subhref: "/Documentation/Beta.html"
     - subtitle: "Output File Naming"
       subhref: "/Documentation/OutputFileNaming.html"
+    - subtitle: "CPU Utilization"
+      subhref: "/Documentation/CpuUtilization.html"
     - subtitle: "Other Resources"
       subhref: "/Documentation/OtherResources.html"
       
