--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -9,13 +9,13 @@
     <PackageVersion Include="Microsoft.AnyContainer.DryIoc" Version="1.0.0-beta201808141" />
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageVersion Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
-    <PackageVersion Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.0.0-preview5" />
+    <PackageVersion Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     <PackageVersion Include="Ookii.Dialogs.Wpf" Version="3.1.0" />
     <PackageVersion Include="PipeMethodCalls" Version="4.0.2" />
     <PackageVersion Include="PipeMethodCalls.NetJson" Version="3.0.0" />
     <PackageVersion Include="ReactiveUI" Version="13.1.1" />
     <PackageVersion Include="ReactiveUI.WPF" Version="13.1.1" />
-    <PackageVersion Include="System.Data.SQLite.Core" Version="1.0.113.7" />
+    <PackageVersion Include="System.Data.SQLite.Core" Version="1.0.118" />
     <PackageVersion Include="System.Management" Version="5.0.0" />
     <PackageVersion Include="System.Runtime.InteropServices" Version="4.3.0" />
     <PackageVersion Include="System.Text.Json" Version="8.0.3" />
