--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -16,7 +16,7 @@ jobs:
         uses: crowdin/github-action@v2
         with:
           upload_sources: true
-          upload_sources_args: '--source /VidCoder/Resources/*.resx'
+          upload_sources_args: '--source /VidCoder/Resources/*.resx --translation /VidCoder/Resources/Translations/%file_name%.%osx_locale%.resx'
           upload_translations: false
           download_translations: false
           localization_branch_name: l10n_crowdin_translations
