--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -19,7 +19,7 @@ jobs:
           upload_translations: false
           source: VidCoder/Resources/*.resx
           translation: VidCoder/Resources/Translations/%file_name%.%osx_locale%.resx
-          download_translations: false
+          download_translations: true
           localization_branch_name: l10n_crowdin_translations
           create_pull_request: true
           pull_request_title: 'New Crowdin Translations'
