Add listener for repository dispatch event for Crowdin

--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [ beta ]
   workflow_dispatch:
+  repository_dispatch:
+    types:
+      - file-updated
 
 jobs:
   synchronize-with-crowdin:
